--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,35 +13,109 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get -y install vim live-build fdisk
-
+        sudo apt-get update
+        sudo apt-get install -y wget live-build
+        sudo apt-get install -y build-essential fakeroot libncurses5-dev libssl-dev ccache bison flex libelf-dev libudev-dev libpci-dev libiberty-dev debhelper dpkg-dev debootstrap gpg debian-archive-keyring
+        wget https://ftp.debian.org/debian/pool/main/l/live-build/live-build_20230502_all.deb
+#        sudo dpkg -i live-build_20230502_all.deb
+        #!/bin/bash -x
+        # Patch for Debian bug 1032408 (see bugs.debian.org)
+#        sudo patch -p1 -N -d /usr/lib/live/build <patches/binary_rootfs.patch
+        # Patches for Debian bug 1043133 (see bugs.debian.org)
+#        sudo patch -p1 -N -d /usr/lib/live/build <patches/chroot_firmware.patch
+#        sudo patch -p1 -N -d /usr/lib/live/build <patches/installer_debian-installer.patch
+        # Patch to display boot menu for 10 seconds before booting
+#        sudo patch -p1 -N -d /usr/share/live/build/bootloaders/isolinux <patches/isolinux.cfg.patch
     - name: Configure live-build for Debian with Custom Kernel and Initrd
       run: |
-        sudo lb config --distribution bookworm --debian-installer live --binary-images netboot --debconf-frontend noninteractive --chroot-filesystem squashfs --apt-options "--yes" --bootappend-live "keyboard-layouts=no" --mode debian  --firmware-chroot false
-
+        mkdir -p live-build
+        cd live-build
+        
+        # Initialize live-build configuration
+        lb config --distribution bookworm --archive-areas "main contrib non-free non-free-firmware" --debian-installer none --firmware-chroot true
+        
+        # Create necessary directories
+        mkdir -p config/packages.chroot config/package-lists config/hooks/normal config/includes.chroot/etc/default config/includes.chroot/lib
+        
+        # Create package list
+        cat << EOF > config/package-lists/my.list.chroot
+        efivar
+        efibootmgr
+        grub-efi-amd64
+        linux-image-amd64
+        firmware-linux
+        firmware-linux-nonfree
+        EOF
+        
+        # Create GRUB default configuration
+        echo 'GRUB_TIMEOUT=5' > config/includes.chroot/etc/default/grub
+        
+        # Create a hook to install custom kernel, update initramfs, and install grub-pc
+        cat << EOF > config/hooks/normal/0100-update-initramfs.hook.chroot
+        #!/bin/sh
+        set -e
+        
+        # Ensure /dev, /proc, and /sys are mounted
+        mount -t devtmpfs devtmpfs /dev || true
+        mount -t proc proc /proc || true
+        mount -t sysfs sysfs /sys || true
+        
+        # Install linux-firmware package to address missing firmware warnings
+        apt-get update
+        apt-get install -y firmware-linux-nonfree firmware-linux-free amd64-microcode intel-microcode
+        
+        # Install grub-pc after initial setup
+        DEBIAN_FRONTEND=noninteractive apt-get install -y grub-pc
+        
+        # Update GRUB configuration
+        update-grub
+        
+        # Unmount the filesystems
+        umount /sys || true
+        umount /proc || true
+        umount /dev || true
+        EOF
+        
+        chmod +x config/hooks/normal/0100-update-initramfs.hook.chroot
     - name: Build Debian Live ISO
       run: |
+        cd live-build
+        sudo lb clean
+        sudo lb config
         sudo lb build
+      continue-on-error: true
 
+    - name: Display build logs
+      if: always()
+      run: |
+        cd live-build
+        if [ -f .build/logs/binary ]; then
+          echo "Binary build log:"
+          cat .build/logs/binary
+        fi
+        if [ -f .build/logs/chroot ]; then
+          echo "Chroot build log:"
+          cat .build/logs/chroot
+        fi
     - name: Check for ISO file
       run: |
-        if [ -f live-image-amd64.hybrid.iso ]; then
+        if [ -f live-build/live-image-amd64.hybrid.iso ]; then
           echo "ISO file created successfully"
         else
           echo "Error: ISO file not created"
-          ls -R
+          ls -R live-build
           exit 1
         fi
-
     - name: Upload Live ISO
       if: success()
       uses: actions/upload-artifact@v4
       with:
         name: debian-live-custom-kernel-initrd.iso
-        path: live-image-amd64.hybrid.iso
+        path: live-build/live-image-amd64.hybrid.iso
 
     - name: Clean up
       if: always()
       run: |
-         lb clean
-         sudo rm -rf chroot
+        cd live-build
+        sudo lb clean
+        sudo rm -rf chroot
