--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -32,7 +32,20 @@ jobs:
         cd live-build
         
         # Initialize live-build configuration
-        lb config --distribution noble --archive-areas "main contrib non-free non-free-firmware" --firmware-chroot true
+        #lb config --distribution noble --archive-areas "main contrib non-free non-free-firmware" --firmware-chroot true
+
+        lb config \
+          --distribution noble \
+          --debian-installer live \
+          --debian-installer-distribution noble \
+          --archive-areas "main restricted universe multiverse" \
+          --updates true \
+          --security true \
+          --mirror-bootstrap "http://archive.ubuntu.com/ubuntu/" \
+          --mirror-binary "http://archive.ubuntu.com/ubuntu/" \
+          --mirror-binary-security "http://security.ubuntu.com/ubuntu/" \
+          --mirror-debian-installer "http://archive.ubuntu.com/ubuntu/" \
+          --apt-recommends false
         
         # Create necessary directories
         mkdir -p config/packages.chroot config/package-lists config/hooks/normal config/includes.chroot/etc/default config/includes.chroot/lib
