--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -60,6 +60,7 @@ jobs:
         grub-efi-amd64
         pxelinux
         syslinux-common
+        linux-image-generic
         EOF
         
         # Create GRUB default configuration
@@ -77,7 +78,7 @@ jobs:
         
         # Install linux-firmware package to address missing firmware warnings
         apt-get update
-        apt-get install -y syslinux syslinux-common pxelinux
+        apt-get install -y syslinux syslinux-common pxelinux linux-image-generic
         
         # Install grub-pc after initial setup
         DEBIAN_FRONTEND=noninteractive apt-get install -y grub-pc
