--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -100,6 +100,7 @@ jobs:
         sudo lb clean
         sudo lb config
         sudo lb build
+      continue-on-error: true
 
     - name: Check for ISO file
       run: |
