--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -14,32 +14,31 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget syslinux-common pxelinux live-build
+        sudo apt-get install -y wget syslinux-common pxelinux
         sudo apt-get install -y build-essential fakeroot libncurses5-dev libssl-dev ccache bison flex libelf-dev libudev-dev libpci-dev libiberty-dev debhelper dpkg-dev debootstrap gpg ubuntu-keyring
-        #wget https://ftp.debian.org/debian/pool/main/l/live-build/live-build_20230502_all.deb
-        #sudo dpkg -i live-build_20230502_all.deb
+        wget https://ftp.debian.org/debian/pool/main/l/live-build/live-build_20230502_all.deb
+        sudo dpkg -i live-build_20230502_all.deb
         #!/bin/bash -x
         # Patch for Debian bug 1032408 (see bugs.debian.org)
-        #sudo patch -p1 -N -d /usr/lib/live/build <patches/binary_rootfs.patch
+        sudo patch -p1 -N -d /usr/lib/live/build <patches/binary_rootfs.patch
         # Patches for Debian bug 1043133 (see bugs.debian.org)
-        #sudo patch -p1 -N -d /usr/lib/live/build <patches/chroot_firmware.patch
-        #sudo patch -p1 -N -d /usr/lib/live/build <patches/installer_debian-installer.patch
+        sudo patch -p1 -N -d /usr/lib/live/build <patches/chroot_firmware.patch
+        sudo patch -p1 -N -d /usr/lib/live/build <patches/installer_debian-installer.patch
         # Patch to display boot menu for 10 seconds before booting
-        #sudo patch -p1 -N -d /usr/share/live/build/bootloaders/isolinux <patches/isolinux.cfg.patch
-    - name: Configure live-build for Debian with Custom Kernel and Initrd
+        sudo patch -p1 -N -d /usr/share/live/build/bootloaders/isolinux <patches/isolinux.cfg.patch
+
+    - name: Configure live-build for Ubuntu Noble
       run: |
         mkdir -p live-build
         cd live-build
         
-        # Initialize live-build configuration
-        #lb config --distribution noble --archive-areas "main contrib non-free non-free-firmware" --firmware-chroot true
-
         lb config \
           --distribution noble \
           --debian-installer live \
           --debian-installer-distribution noble \
           --archive-areas "main restricted universe multiverse" \
           --security true \
+          --updates true \
           --mirror-bootstrap "http://archive.ubuntu.com/ubuntu/" \
           --mirror-binary "http://archive.ubuntu.com/ubuntu/" \
           --mirror-binary-security "http://security.ubuntu.com/ubuntu/" \
@@ -48,25 +47,21 @@ jobs:
           --parent-mirror-binary-security "http://security.ubuntu.com/ubuntu/" \
           --mirror-chroot-security "http://security.ubuntu.com/ubuntu/" \
           --apt-recommends false
-          #--updates true \
-        
+
         # Create necessary directories
-        mkdir -p config/packages.chroot config/package-lists config/hooks/normal config/includes.chroot/etc/default config/includes.chroot/lib
-        
+        mkdir -p config/packages.chroot config/package-lists config/hooks/normal config/includes.chroot/etc/default
+
         # Create package list
         cat << EOF > config/package-lists/my.list.chroot
-        #efivar
-        #efibootmgr
-        #grub-efi-amd64
-        #pxelinux
-        #syslinux-common
-        #linux-image-generic
+        linux-image-generic
+        linux-headers-generic
+        grub-pc
         EOF
         
         # Create GRUB default configuration
         echo 'GRUB_TIMEOUT=5' > config/includes.chroot/etc/default/grub
         
-        # Create a hook to install custom kernel, update initramfs, and install grub-pc
+        # Create a hook to update initramfs and install grub-pc
         cat << EOF > config/hooks/normal/0100-update-initramfs.hook.chroot
         #!/bin/sh
         set -e
@@ -76,12 +71,12 @@ jobs:
         mount -t proc proc /proc || true
         mount -t sysfs sysfs /sys || true
         
-        # Install linux-firmware package to address missing firmware warnings
+        # Update and install packages
         apt-get update
-        #apt-get install -y syslinux syslinux-common pxelinux linux-image-generic
+        DEBIAN_FRONTEND=noninteractive apt-get install -y linux-image-generic linux-headers-generic grub-pc
         
-        # Install grub-pc after initial setup
-        DEBIAN_FRONTEND=noninteractive apt-get install -y grub-pc
+        # Update initramfs for all installed kernels
+        update-initramfs -u -k all
         
         # Update GRUB configuration
         update-grub
@@ -94,7 +89,7 @@ jobs:
         
         chmod +x config/hooks/normal/0100-update-initramfs.hook.chroot
         
-    - name: Build Debian Live ISO
+    - name: Build Ubuntu Live ISO
       run: |
         cd live-build
         sudo lb clean
@@ -111,11 +106,12 @@ jobs:
           ls -R live-build
           exit 1
         fi
+
     - name: Upload Live ISO
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: debian-live-custom-kernel-initrd.iso
+        name: ubuntu-noble-live.iso
         path: live-build/live-image-amd64.hybrid.iso
 
     - name: Clean up
